adjusted a spacing issue

--- a/src/app/components/job-listings/job-listing/job-listing.component.scss
+++ b/src/app/components/job-listings/job-listing/job-listing.component.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: block;
   width: 100%;
-  padding: 33px 20px 25px;
+  padding: 40px 20px 25px;
 
   border-radius: 5px;
   background-color: var(--job-listing-bg-color);
@@ -21,17 +21,18 @@
 img.logo {
   position: absolute;
   top: 0;
-  width: clamp(52px, 6%, 89px);
+  width: clamp(48px, 6%, 89px);
   transform: translateY(-50%);
 }
 
 p {
-  margin-bottom: 15px;
+  margin-bottom: 19px;
 }
 
 p.company-and-highlights {
   display: flex;
   align-items: center;
+  height: 1rem;
 
   color: var(--job-listing-text-color-primary);
   font-size: 1.3rem;
